[gd_scene load_steps=10 format=3 uid="uid://bdnad407swrlk"]

[ext_resource type="Script" path="res://Scene/SwampLevel1/Water_quicksand/water_quicksand.gd" id="1_0jfg7"]
[ext_resource type="Texture2D" uid="uid://koewh6ab630i" path="res://Lotos.png" id="2_ftvkb"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5yjc5"]
radius = 14.75
height = 5308.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_futg5"]
radius = 14.75
height = 6020.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_02o6j"]
radius = 14.75
height = 4990.03

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_eak3w"]
radius = 14.75
height = 5766.08

[sub_resource type="Animation" id="Animation_sndf5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Water_collisionShape_1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(8357, 470)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Water_collisionShape_2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(15094, 470)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Area_player/Water_collisionShape_1_ar:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(8357, 465)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Area_player/Water_collisionShape_2_ar:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(15094, 465)]
}

[sub_resource type="Animation" id="Animation_2ydsv"]
resource_name = "animation_quicksand"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Water_collisionShape_1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(8357, 470), Vector2(8357, 515)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Water_collisionShape_2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(15094, 470), Vector2(15094, 515)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Area_player/Water_collisionShape_1_ar:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(8357, 465), Vector2(8357, 510)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Area_player/Water_collisionShape_2_ar:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(15094, 465), Vector2(15094, 510)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xevht"]
_data = {
"RESET": SubResource("Animation_sndf5"),
"animation_quicksand": SubResource("Animation_2ydsv")
}

[node name="Water_quicksand" type="AnimatableBody2D"]
collision_mask = 2
script = ExtResource("1_0jfg7")

[node name="Water_collisionShape_1" type="CollisionShape2D" parent="."]
position = Vector2(8357, 470)
rotation = -1.57288
shape = SubResource("CapsuleShape2D_5yjc5")
debug_color = Color(0.252619, 0.350818, 0.754342, 0.419608)

[node name="Lotos" type="Sprite2D" parent="Water_collisionShape_1"]
visible = false
position = Vector2(50.0402, -1938.9)
rotation = 1.57288
texture = ExtResource("2_ftvkb")

[node name="Water_collisionShape_2" type="CollisionShape2D" parent="."]
position = Vector2(15094, 470)
rotation = -1.57773
shape = SubResource("CapsuleShape2D_futg5")
debug_color = Color(0.252619, 0.350818, 0.754342, 0.419608)

[node name="Area_player" type="Area2D" parent="."]
collision_mask = 2

[node name="Water_collisionShape_1_ar" type="CollisionShape2D" parent="Area_player"]
position = Vector2(8357, 465)
rotation = -1.57288
shape = SubResource("CapsuleShape2D_02o6j")
debug_color = Color(0.611765, 0.254902, 0.368627, 0.419608)

[node name="Water_collisionShape_2_ar" type="CollisionShape2D" parent="Area_player"]
position = Vector2(15094, 465)
rotation = -1.57773
shape = SubResource("CapsuleShape2D_eak3w")
debug_color = Color(0.611765, 0.254902, 0.368627, 0.419608)

[node name="Animation_water_move" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_xevht")
}

[connection signal="body_entered" from="Area_player" to="." method="_on_area_player_body_entered"]
[connection signal="body_exited" from="Area_player" to="." method="_on_area_player_body_exited"]
[connection signal="animation_finished" from="Animation_water_move" to="." method="_on_animation_water_move_animation_finished"]
